# stock-market-analysis-agent

./: .gitignore  README.md  config.example.yaml  daily_task.py  pyproject.toml
.github/workflows/: daily_analysis.yml
docs/: 定时任务设置.md
prompts/: .gitkeep  intraday_analysis.txt  long_term.txt  short_term.txt  support_resistance.txt  system.txt
prompts/examples/: .gitkeep  long_term_example.json  short_term_example.json  support_resistance_example.json
prompts/sentiment/: analysis.txt  system.txt
prompts/sentiment/examples/: sentiment_example.json
scripts/: setup_scheduled_task.bat
src/: __init__.py  __main__.py  cli.py
src/agent/: __init__.py  market_agent.py
src/analysis/: __init__.py  calculator.py  context_builder.py  prompt_engine.py
src/data/: __init__.py  akshare_source.py  parser.py  time_filter.py  tushare_source.py
src/llm/: __init__.py  base.py  client.py  config_loader.py  errors.py
src/models/: __init__.py  analysis_result.py  market_data.py
src/sentiment/: __init__.py  models.py
tests/: test_calculator_properties.py  test_llm_infrastructure.py  test_parser.py  test_report_properties.py  test_support_resistance_properties.py
